--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 </head>
 <body>
     <h1>HOLA MUNDO</h1>
+    <ul>
+        <li>
+            hola
+        </li>
+        <li>
+            adios
+        </li>
+    </ul>
 </body>
 </html>
