--- a/index.html
+++ b/index.html
@@ -2,16 +2,51 @@
 <html>
 <head>
     <title>Actualización personal</title>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
-    <h1>HOLA MUNDO</h1>
+    <!-- inserta codigo rapido ul>li*4 presionar TAB-->
     <ul>
-        <li>
-            hola
-        </li>
-        <li>
-            adios
-        </li>
+        <li>Pedro</li>
+        <li>Gabriel</li>
+        <li>Jaime</li>
     </ul>
+
+    <!-- insertar codigo rapido con ID ul#nombre>li*4 presionar TAB-->
+    <ul id="raza">
+        <li>Pastor Alemán</li>
+        <li>Chiguagua</li>
+        <li>Doberman</li>
+        <!--<li>Golden Retriever</li>-->
+    </ul>
+
+    <!-- insertar codigo rapido con clase ulnombre.color>li*4 presionar TAB-->
+    <ul class="color">
+        <li id="rojo">Rojo</li>
+        <li id="azul">Azul</li>
+        <li id="verde">Verde</li>
+        <li id="amarilo">Amarillo</li>
+    </ul>
+
+    <!-- insertar codigo rapido con texto numerador ul>li{texto $}*4 presionar TAB-->
+    <ul id="alimentos">
+        <li>Jamón</li>
+        <li>Chorizo</li>
+        <li>Lentejas</li>
+        <li>Salchichón</li>
+    </ul>
+
+    <!-- insertar codigo combinando todo los ejemplos-->
+    <ul id="colores">
+        <li >Color 1</li>
+        <li >Color 2</li>
+        <li >Color 3</li>
+        <li >Color 4</li>
+        <li >Color 5</li>
+        <li >Color 6</li>
+    </ul>
+
+
 </body>
 </html>
