--- a/index.html
+++ b/index.html
@@ -1,52 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Actualización personal</title>
-    <script src="js/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACTUALIZACIÃ“N</title>
+    <link rel="stylesheet" href="style.css">
     <script src="js/main.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <!-- inserta codigo rapido ul>li*4 presionar TAB-->
-    <ul>
-        <li>Pedro</li>
-        <li>Gabriel</li>
-        <li>Jaime</li>
-    </ul>
-
-    <!-- insertar codigo rapido con ID ul#nombre>li*4 presionar TAB-->
-    <ul id="raza">
-        <li>Pastor Alemán</li>
-        <li>Chiguagua</li>
-        <li>Doberman</li>
-        <!--<li>Golden Retriever</li>-->
-    </ul>
-
-    <!-- insertar codigo rapido con clase ulnombre.color>li*4 presionar TAB-->
-    <ul class="color">
-        <li id="rojo">Rojo</li>
-        <li id="azul">Azul</li>
-        <li id="verde">Verde</li>
-        <li id="amarilo">Amarillo</li>
-    </ul>
-
-    <!-- insertar codigo rapido con texto numerador ul>li{texto $}*4 presionar TAB-->
-    <ul id="alimentos">
-        <li>Jamón</li>
-        <li>Chorizo</li>
-        <li>Lentejas</li>
-        <li>Salchichón</li>
-    </ul>
-
-    <!-- insertar codigo combinando todo los ejemplos-->
-    <ul id="colores">
-        <li >Color 1</li>
-        <li >Color 2</li>
-        <li >Color 3</li>
-        <li >Color 4</li>
-        <li >Color 5</li>
-        <li >Color 6</li>
-    </ul>
-
-
+    <div id="burger">
+        <div class="barra superior"></div>
+        <div class="barra medio"></div>
+        <div class="barra inferior"></div>
+    </div>
+    <div class="menu">
+        <nav>
+            <a href="#">Archivos</a>
+            <a href="#">Documentos</a>
+            <a href="#">InscripciÃ³n</a>
+            <a href="#">Sobre nosotros</a>
+            <p class="copyright">&copy; DMIAPER</p>
+        </nav>
+    </div>
 </body>
 </html>
