--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACTUALIZACIÓN</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
+    
 </head>
 <body>
-    <div id="burger">
-        <div class="barra superior"></div>
-        <div class="barra medio"></div>
-        <div class="barra inferior"></div>
-    </div>
-    <div class="menu">
-        <nav>
-            <a href="#">Archivos</a>
-            <a href="#">Documentos</a>
-            <a href="#">Inscripción</a>
-            <a href="#">Sobre nosotros</a>
-            <p class="copyright">&copy; DMIAPER</p>
-        </nav>
-    </div>
+
 </body>
 </html>
