--- a/index.html
+++ b/index.html
@@ -11,6 +11,86 @@
     
 </head>
 <body>
+    
+    <!-- Barra de navegación -->
+    <header class="transparente">
+        <img src="img/logo.svg" alt="Logo Imperial Real State">
+        <nav>
+            <a href="#" class="activo">Inicio</a>
+            <a href="#">Venta</a>
+            <a href="#">Alquiler</a>
+            <a href="#">Contacto</a>
+        </nav>
+    </header>
 
+    <!--imagenes de fondo-->
+    <div class="hero">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="hero-logo">
+            <img src="img/logo-frame.svg" alt="Logo Imperial Real State">
+        </div>
+        <a href="#" class="hero-down">
+            <img src="img/down.svg" alt="flecha abajo">
+        </a>
+    </div>
+
+    <!-- menu burger/lateral -->
+    <div id="burger">
+        <div class="barra superior"></div>
+        <div class="barra medio"></div>
+        <div class="barra inferior"></div>
+    </div>
+
+    <div class="menu">
+        <nav>
+            <a href="#">Inicio</a>
+            <hr>
+            <a href="#">Venta</a>
+            <hr>
+            <a href="#">Alquiler</a>
+            <hr>
+            <a href="#">Contacto</a>
+        </nav>
+        <p class="copyright">&copy; DMIAPER</p>
+    </div>
+
+    <!-- layout -->
+    <div class="inicio" id="ini">
+        <h1>Imperial Real State</h1>
+        <p>Bienvenidos a Imperail Rael State, te ofrecemos la más alta calidad royal en viviendas.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+    </div>
 </body>
 </html>
