--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="hero-logo">
             <img src="img/logo-frame.svg" alt="Logo Imperial Real State">
         </div>
-        <a href="#" class="hero-down">
+        <a href="#ini" class="hero-down">
             <img src="img/down.svg" alt="flecha abajo">
         </a>
     </div>
@@ -57,40 +57,23 @@
     </div>
 
     <!-- layout -->
-    <div class="inicio" id="ini">
-        <h1>Imperial Real State</h1>
-        <p>Bienvenidos a Imperail Rael State, te ofrecemos la más alta calidad royal en viviendas.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem eius, optio iure sit cumque alias! Esse, perferendis necessitatibus. Cupiditate a similique commodi accusamus consectetur atque dolor voluptas quasi consequuntur. Ducimus.</p>
+    <div class="fila inicio">
+        <span id="ini">&nbsp;</span>
+        <div class="col-66">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, ullam ab nisi reprehenderit quos autem eius quae itaque quia ut, officia dolores perspiciatis? Ab, molestiae.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ad consequatur culpa, facilis similique aut?</p>
+        </div>  
+        <div class="col-33">
+            <img src="img/thumb4.jpg" alt="imagen casa 4">
+        </div>
+    </div>
+    <div class="fila">
+        <div class="col-50">
+            <img src="img/thumb5.jpg" alt="">
+        </div>
+        <div class="col-50">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est alias officia iure accusantium ducimus voluptatum hic odio dolor ipsam maiores nam ut, a repellat impedit accusamus id laboriosam esse eius quia, vel asperiores perspiciatis modi optio quaerat! Consectetur consequuntur, deserunt aspernatur incidunt voluptatibus aliquid sequi est obcaecati fuga ullam aliquam?</p>
+        </div>
     </div>
 </body>
 </html>
