--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     </div>
 
     <!-- layout -->
+    <!-- parrafo 1-->
     <div class="fila inicio">
         <span id="ini">&nbsp;</span>
         <div class="col-66">
@@ -67,6 +68,8 @@
             <img src="img/thumb4.jpg" alt="imagen casa 4">
         </div>
     </div>
+   
+    <!-- parrafo 2-->
     <div class="fila">
         <div class="col-50">
             <img src="img/thumb5.jpg" alt="">
@@ -75,5 +78,88 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est alias officia iure accusantium ducimus voluptatum hic odio dolor ipsam maiores nam ut, a repellat impedit accusamus id laboriosam esse eius quia, vel asperiores perspiciatis modi optio quaerat! Consectetur consequuntur, deserunt aspernatur incidunt voluptatibus aliquid sequi est obcaecati fuga ullam aliquam?</p>
         </div>
     </div>
+   
+    <!-- PARALLAX -->
+    <div class="fila parallax">
+        <div class="col-100">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat a atque praesentium laboriosam commodi qui!</p>
+        </div>
+    </div>
+
+    <!-- selectores de secciones-->
+    <div class="fila">
+        <div class="col-50 caja-nav flex-col-center">
+            <img src="img/comprar.svg" alt="">
+            <a href="#">Venta</a>
+        </div>
+        <div class="col-50 caja-nav flex-col-center">
+            <img src="img/alquilar.svg" alt="">
+            <a href="#">Alquilar</a>
+        </div>
+    </div>
+
+     <!-- Formulário -->
+    <div class="fila">
+        <div class="col-100">
+            <p>Subscribete a nuestra newsletter</p>
+            <div class="flex-col-center">
+                <form class="contacto">
+                    <div class="fila">
+                        <input class="usuario" type="text" placeholder="Nombre y Apellidos">
+                    </div>
+                    <div class="fila">
+                        <input class="email" type="mail" placeholder="Correo Electrónico">
+                    </div>
+                    <div class="fila flex-end">
+                        <button type="submit">Enviar</button>
+                    </div>
+                    <div class="fila flex-center">
+                        <input type="checkbox" id="condiciones">
+                        <label for="condiciones">
+                            Acepto las condiciones de subscripción.
+                        </label>
+                    </div>
+                </form>
+            </div>            
+        </div>
+    </div>
+
+    <!-- Pie de página -->
+    <footer class="fila"> 
+        <div class="col-33">
+            <p>Imperial Real State</p>
+            <p class="flex-start">
+                <img class="m-r-small" src="img/map.svg" alt="mapa">
+                Avd. Extremadura nº205
+            </p>
+            <p>06150 Santa Marta</p>
+            <p class="flex-start">
+                <img class="m-r-small" src="img/phone.svg" alt="telefono">
+                924 26 28 25
+            </p>
+            <p class="flex-start">
+                <img class="m-r-small" src="img/mail.svg" alt="">
+                atencion@imperailrealstate.com
+            </p>
+        </div>
+        <div class="col-33">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2204.405141828695!2d-6.629231651709885!3d38.614385177749654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd16ec9f88f638cf%3A0x79d957882284dc9c!2sOficina%20de%20Correos!5e0!3m2!1ses!2ses!4v1647868287147!5m2!1ses!2ses" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <div class="col-33">
+            <div class="flex-around">
+                <img class="rrss" src="img/facebook.svg" alt="facebook">
+                <img class="rrss" src="img/twitter.svg" alt="twitter">
+                <img class="rrss" src="img/instagram.svg" alt="Instagram">
+                <img class="rrss" src="img/whatsapp.svg" alt="Whastapp">
+            </div>
+            <div class="flex-around m-t"> 
+                <a href="#">Política de cookies</a>
+                <a href="#">Aviso legal</a>
+                <a href="#">Contacto</a>
+            </div>
+            <p class="copyright m-t">&copy; DMIAPER All Rights reserved</p>
+        </div>
+    </footer>
+
 </body>
 </html>
