--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
             <a href="#" class="activo">Inicio</a>
-            <a href="#">Venta</a>
+            <a href="#">Ventas</a>
             <a href="#">Alquiler</a>
             <a href="#">Contacto</a>
         </nav>
@@ -47,7 +47,7 @@
         <nav>
             <a href="#">Inicio</a>
             <hr>
-            <a href="#">Venta</a>
+            <a href="#">Ventas</a>
             <hr>
             <a href="#">Alquiler</a>
             <hr>
