--- a/alquiler.html
+++ b/alquiler.html
@@ -17,8 +17,8 @@
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
             <a href="index.html">Inicio</a>
-            <a href="ventas.html" class="activo">Ventas</a>
-            <a href="alquiler.html">Alquiler</a>
+            <a href="ventas.html">Ventas</a>
+            <a href="alquiler.html" class="activo">Alquiler</a>
             <a href="contacto.html">Contacto</a>
         </nav>
     </header>
