--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="transparente">
         <img src="img/logo.svg" alt="Logo Imperial Real State">
         <nav>
-            <a href="#" class="activo">Inicio</a>
-            <a href="#">Ventas</a>
-            <a href="#">Alquiler</a>
-            <a href="#">Contacto</a>
+            <a href="index.html" class="activo">Inicio</a>
+            <a href="ventas.html">Ventas</a>
+            <a href="alquiler.html">Alquiler</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
     </header>
 
@@ -45,13 +45,13 @@
 
     <div class="menu">
         <nav>
-            <a href="#">Inicio</a>
+            <a href="index.html">Inicio</a>
             <hr>
-            <a href="#">Ventas</a>
+            <a href="ventas.html">Ventas</a>
             <hr>
-            <a href="#">Alquiler</a>
+            <a href="alquiler.html">Alquiler</a>
             <hr>
-            <a href="#">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <p class="copyright">&copy; DMIAPER</p>
     </div>
@@ -90,11 +90,11 @@
     <div class="fila">
         <div class="col-50 caja-nav flex-col-center">
             <img src="img/comprar.svg" alt="">
-            <a href="#">Venta</a>
+            <a href="ventas.html">Venta</a>
         </div>
         <div class="col-50 caja-nav flex-col-center">
             <img src="img/alquilar.svg" alt="">
-            <a href="#">Alquilar</a>
+            <a href="alquiler.html">Alquilar</a>
         </div>
     </div>
 
@@ -155,7 +155,7 @@
             <div class="flex-around m-t"> 
                 <a href="#">Política de cookies</a>
                 <a href="#">Aviso legal</a>
-                <a href="#">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </div>
             <p class="copyright m-t">&copy; DMIAPER All Rights reserved</p>
         </div>
