--- a/contacto.html
+++ b/contacto.html
@@ -45,7 +45,74 @@
     </div>
 
     <!-- layout -->
-    
+    <!-- Formulário -->
+    <div class="fila contacto">
+        <div class="col-100">
+            <p>Subscribete a nuestra newsletter</p>
+            <div class="flex-col-center">
+                <form class="contacto">
+                    <div class="fila">
+                        <input class="usuario" type="text" placeholder="Nombre y Apellidos">
+                    </div>
+                    <div class="fila">
+                        <input class="email" type="mail" placeholder="Correo Electrónico">
+                    </div>
+                    <div class="fila flex-end">
+                        <button type="submit">Enviar</button>
+                    </div>
+                    <div class="fila flex-center">
+                        <input type="checkbox" id="condiciones">
+                        <label for="condiciones">
+                            Acepto las condiciones de subscripción.
+                        </label>
+                    </div>
+                </form>
+            </div>            
+        </div>
+    </div>
+
+    <div class="fila">
+        <span id="aviso">&nbsp;</span>
+        <div class="col-100">
+            <h1>Aviso Legal</h1>        
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+        </div>
+    </div>
+    <div class="fila">
+        <span id="cookies">&nbsp;</span>
+        <div class="col-100">
+            <h1>Políticas de COOKIES</h1>        
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, pariatur quis, labore soluta sit, saepe ipsa obcaecati mollitia laudantium doloribus eius tempora sed minus? Excepturi!</p>
+        </div>
+    </div>
 
     
     <!-- Pie de página -->
@@ -77,8 +144,8 @@
                 <img class="rrss" src="img/whatsapp.svg" alt="Whastapp">
             </div>
             <div class="flex-around m-t"> 
-                <a href="#">Política de cookies</a>
-                <a href="#">Aviso legal</a>
+                <a href="contacto.html#cookies">Política de cookies</a>
+                <a href="contacto.html#aviso">Aviso legal</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <p class="copyright m-t">&copy; DMIAPER All Rights reserved</p>
