--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
     </div>
 
-     <!-- Formulário -->
+    <!-- Formulário -->
     <div class="fila">
         <div class="col-100">
             <p>Subscribete a nuestra newsletter</p>
@@ -153,8 +153,8 @@
                 <img class="rrss" src="img/whatsapp.svg" alt="Whastapp">
             </div>
             <div class="flex-around m-t"> 
-                <a href="#">Política de cookies</a>
-                <a href="#">Aviso legal</a>
+                <a href="contacto.html#cookies">Política de cookies</a>
+                <a href="contacto.html#aviso">Aviso legal</a>
                 <a href="contacto.html">Contacto</a>
             </div>
             <p class="copyright m-t">&copy; DMIAPER All Rights reserved</p>
